changed method getFirst() to get(0), it is not available in java 17